--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	    <div class="option">
 	      <h2 style="font-size: 35px;"> Ride</h2>
 	      <hr>
-	      <form>
+	      <form action="ride.html">
 	        <div class="form-group">
 	          <label for="pickup-location">Pickup Location</label>
 	          <input type="text" id="pickup-location" name="pickup-location">
